# RegLab_test_task

./: CMakeLists.txt  README.md  RegLab_test_task  resources.qrc
include/: package.h  package_installer_app.h  package_manager.h
src/: main.cpp  package.cpp  package_installer_app.cpp  package_manager.cpp
